--- a/product.html
+++ b/product.html
@@ -13,6 +13,9 @@
     <body>
         <header>
             <!-- place navbar here -->
+            <button type="button" class="close"   aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
         </header>
         <main></main>
         <footer>
