--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <header class="p-2">
-            <nav class="navbar navbar-expand-md p-4">
+            <nav class="navbar navbar-expand-md p-4 rounded">
                 <div class="container">
                     <a class="navbar-brand d-flex align-items-center" href="index.html" style="color: #155fa0; font-weight: 800;">
                         <img
@@ -45,7 +45,7 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavId">
                         <ul class="navbar-nav ms-auto mt-2 mt-lg-0 me-3">
                             <li class="nav-item">
-                                <a class="nav-link active" href="index.html" aria-current="page">Hem</a>
+                                <a class="nav-link active" href="index.html" aria-current="page"><u>Hem</u></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="productlist.html">Produkter</a>
@@ -59,7 +59,7 @@
                         </ul>
             
                         <!-- Sökfält -->
-                        <form class="d-flex my-2 my-lg-0" style="font-family: 'Baloo 2', Arial, sans-serif ;">
+                        <form class="d-flex my-2 my-lg-0" style="font-family: 'Quicksand', Arial, sans-serif ;">
                             <input
                                 class="form-control me-sm-2"
                                 type="text"
@@ -75,9 +75,9 @@
             </nav>
             <div class="jumbotron text-center my-5 p-5">
                 <h2 class="display-4" style="color: white;">Välkommen till Sol & Semester AB!</h2>
-                <p class="lead">Din drömsemester börjar här.</p>
+                <h3 class="lead"style="color: white; font-weight: 600;" >Din drömsemester börjar här.</h3>
                 <hr class="my-4" />
-                <p>Utforska våra fantastiska resor och erbjudanden.</p>
+                <h3 style="color: white; font-weight: 600;">Utforska våra fantastiska resor och erbjudanden.</h3>
                 <a class="btn btn-lg bg-white m-3" href="productlist.html" role="button">Läs mer</a>
             </div>
         </header>
@@ -85,7 +85,7 @@
         <main>
             <section>
                 <div>
-                    <h2 class="text-center mb-4">Välkommen till din nya favoritresesajt!</h2>
+                    <h2 class="text-center mb-4">Välkommen till din nya favoritresesite!</h2>
                     <p class="text-center">Vi är stolta över att erbjuda en plattform där du kan hitta de bästa resorna för hela familjen. Oavsett om du letar efter en avkopplande strandsemester, en spännande skidresa eller en kulturell storstadsweekend, har vi något för dig.</p>
                     <p class="text-center">På Sol & Semester AB hjälper vi familjer att hitta glädjen i vardagen genom resor som passar alla - stora som små. Vi tror att kvalitetstid inte behöver vara komplicerad. En solig strand, ett skratt i skidbacken eller en ny stad att upptäcka tillsammans kan förvandla en vanlig vecka till något oförglömligt.</p>
         
