--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <!-- Sökfält -->
                         <form class="d-flex ms-4 my-2 my-lg-0" style="font-family: 'Quicksand', Arial, sans-serif ;">
                             <input
-                                class="form-control me-sm-2"
+                                class="form-control me-sm-3"
                                 type="text"
                                 placeholder="Sök din nästa resa!" 
 
@@ -76,10 +76,10 @@
             </nav>
             <div class="jumbotron text-center my-5 p-5">
                 <h2 class="display-4" style="color: white;">Välkommen till Sol & Semester AB!</h2>
-                <h3 class="lead"style="color: white; font-weight: 600;" >Din drömsemester börjar här.</h3>
+                <h3 class="lead"style="color: white; font-weight: 600;" >Din drömsemester börjar här</h3>
                 <hr class="my-4" />
-                <h3 style="color: white; font-weight: 600;">Utforska våra fantastiska resor och erbjudanden.</h3>
-                <a class="btn btn-lg bg-white m-3" href="productlist.html" role="button">Våra Destinationer</a>
+                <h3 style="color: white; font-weight: 600;">Utforska våra fantastiska resor och erbjudanden</h3>
+                <a class="btn btn-lg bg-white m-3" href="productlist.html" role="button">Boka redan nu!</a>
             </div>
         </header>
 
