--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                     />
                     <div class="card-body">
                         <h4 class="card-title">Prag</h4>
-                        <p class="card-text">Upplev magiska Prag med dess färgglada byggnader, historiska slott och mysiga kullerstensgränder. Här väntar båtutflykter på Moldau, lekfulla parker och spännande historia - perfekt för stora som små upptäckare!</p>
+                        <p class="card-text">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna.</p>
+                        <i class='bx  bx-arrow-right-square' ></i> 
                     </div>
                     </a>
                 </div>
@@ -119,7 +120,8 @@
                     />
                     <div class="card-body">
                         <h4 class="card-title">Kreta</h4>
-                        <p class="card-text">Kreta bjuder på soliga stränder, turkost hav och barnvänliga hotell. Utforska sagolika grottor, åk på båtäventyr eller njut av grekisk mat i charmiga byar - en perfekt blandning av avkoppling och upplevelser för alla åldrar!</p>
+                        <p class="card-text">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
+                        <i class='bx  bx-arrow-right-square' ></i> 
                     </div></a>
                 </div>
                 <a href="product-borabora.html" style="text-decoration: none;"><div class="card m-2">
@@ -130,7 +132,8 @@
                     />
                     <div class="card-body">
                         <h4 class="card-title">Bora Bora</h4>
-                        <p class="card-text">Kristallklart vatten, vita stränder och spännande snorkling – Bora Bora är en tropisk paradisö som bjuder på lugn, lek och lyx. Perfekt för familjer som vill kombinera avkoppling med äventyr i en sagolik miljö!</p>
+                        <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en minnesvärd familjesemester.</p>
+                        <i class='bx  bx-arrow-right-square' ></i> 
                     </div></a>
                 </div>
             </div>
