tillägg av andra sidorna

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="p-2">
             <nav class="navbar navbar-expand-md p-4 rounded">
                 <div class="container">
-                    <a class="navbar-brand d-flex align-items-center" href="index.html" style="color: #155fa0; font-weight: 800;">
+                    <a class="navbar-brand d-flex align-items-center fs-1 fs-md-3 fs-lg-3" href="index.html" style="color: #155fa0; font-weight: 800;">
                         <img
                             src="images/logo.png"
                             alt="Sol & Semester AB Logo"
@@ -64,9 +64,7 @@
                             <input
                                 class="form-control me-sm-3"
                                 type="text"
-                                placeholder="Sök din nästa resa!" 
-
-                            />
+                                placeholder="Sök din nästa resa!" />
                             <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
                                 Sök
                             </button>
@@ -86,23 +84,25 @@
         <main>
             <section>
                 <div>
-                    <h2 class="text-center mb-4">Välkommen till din nya favoritresesite!</h2>
+                    <h2 class="text-center mb-4">Planera din drömsemester hos oss!</h2>
                     <p class="text-center">Vi är stolta över att erbjuda en plattform där du kan hitta de bästa resorna för hela familjen. Oavsett om du letar efter en avkopplande strandsemester, en spännande skidresa eller en kulturell storstadsweekend, har vi något för dig.</p>
                     <br>
                     <p class="text-center">På Sol & Semester AB hjälper vi familjer att hitta glädjen i vardagen genom resor som passar alla - stora som små. Vi tror att kvalitetstid inte behöver vara komplicerad. En solig strand, ett skratt i skidbacken eller en ny stad att upptäcka tillsammans kan förvandla en vanlig vecka till något oförglömligt.</p>
                     <br>
-                    <p>Med hjärtat i familjelivets tempo och örat mot era behov har vi skapat en reseplattform där ni kan drömma, planera och boka tryggt. Oavsett om ni längtar efter en aktiv semester, lugn avkoppling eller något däremellan - vi har något för er.</p>
+                    <p>Med hjärtat i familjelivets tempo och örat mot era behov har vi skapat en reseplattform där ni kan drömma, planera och boka tryggt. Oavsett om ni längtar efter en aktiv semester, lugn avkoppling eller något däremellan - vi hjälper er hitta rätt.</p>
                 </div>
             </section>
 
-            <hr style="color: black;">
+            <hr>
+
+            <section>
             <div class="container">
                 <h2 class="text-center mb-4">Våra utvalda resemål</h2>
             <div class="card-group m-1">
                 <a href="product-prag.html" style="text-decoration: none;"><div class="card m-2">
                     <img
                         class="card-img-top"
-                        src="images/prag.jpg"
+                        src="images/destinations/prague.jpg"
                         alt="Card image cap"
                     />
                     <div class="card-body">
@@ -115,7 +115,7 @@
                 <a href="product-crete.html" style="text-decoration: none;"><div class="card m-2">
                     <img
                         class="card-img-top"
-                        src="images/crete.jpg"
+                        src="images/destinations/crete.jpg"
                         alt="Card image cap"
                     />
                     <div class="card-body">
@@ -127,7 +127,7 @@
                 <a href="product-borabora.html" style="text-decoration: none;"><div class="card m-2">
                     <img
                         class="card-img-top"
-                        src="images/borabora.jpg"
+                        src="images/destinations/borabora.jpg"
                         alt="Card image cap"
                     />
                     <div class="card-body">
@@ -137,8 +137,7 @@
                     </div></a>
                 </div>
             </div>
-            
-            
+            </section>
             <section class="bg py-10 mt-10 text-center">
                 <h3 class="text-2xl font-semibold mb-4">Redo att börja planera din resa?</h3>
                 <p class="mb-6 text-lg">Fyll i vårt kontaktformulär så hjälper vi dig att hitta rätt resa för just er familj.</p>
