--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <section>
             <div class="container">
                 <h2 class="text-center mb-4">Våra utvalda resemål</h2>
+                <p style="text-align: center; margin-bottom: 30px;">Våra utvalda resemål är noga handplockade för att erbjuda dig fantastiska upplevelser till kanonpris. Ta chansen att fynda bland våra bästa erbjudanden och boka din nästa drömresa idag!"</p>
             <div class="card-group m-1">
                 <a href="product-prag.html" style="text-decoration: none;"><div class="card m-2">
                     <img
