massa styling, creta

--- a/productlist.html
+++ b/productlist.html
@@ -96,7 +96,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 4 200:-</p>
                       <p><strong>Typ av resa:</strong> Sol & Bad</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 8 500:-</p>
                       <p><strong>Typ av resa:</strong> Kultur & Äventyr</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 6 195:-</p>
                       <p><strong>Typ av resa:</strong> Sol & Bad</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -139,7 +139,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 3 300:-</p>
                       <p><strong>Typ av resa:</strong> Kultur & Weekend</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -153,7 +153,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 4 700:-</p>
                       <p><strong>Typ av resa:</strong> Sol & Bad</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -167,7 +167,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 5 900:-</p>
                       <p><strong>Typ av resa:</strong> Sol & Äventyr</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -181,7 +181,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 4 900:-</p>
                       <p><strong>Typ av resa:</strong> Natur & Äventyr</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -195,7 +195,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 7 200:-</p>
                       <p><strong>Typ av resa:</strong> Kultur & Äventyr</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
@@ -209,7 +209,7 @@
                       <br>
                       <p><strong>Pris/person från:</strong> 6 800:-</p>
                       <p><strong>Typ av resa:</strong> Natur & Äventyr</p>
-                      <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
+                      <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a>
                     </div>
                   </div>
                 </div>
