--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 </div>
             </nav>
             <div class="jumbotron text-center my-5 p-5" style="background-image:linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0)), url(images/beach-background-third.jpg); background-position: center;">
-                <h2 class="display-4" style="color: white;">Välkommen till Sol & Semester AB!</h2>
+                <h2 class="display-4" style="color: white;">Kontakta oss</h2>
                 <h3 class="lead"style="color: white; font-weight: 600;" ></h3>
                 <hr class="my-4" />
             </div>
