--- a/productlist.html
+++ b/productlist.html
@@ -56,7 +56,7 @@
                                 <a class="nav-link" href="contact.html">Kontakt</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>  </a>
+                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>(1)</a>
                             </li>
                         </ul>
             
@@ -75,7 +75,7 @@
             </nav>
             <div class="jumbotron text-center my-5 p-5" style="background-image:linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0)), url(images/beach-background-second.jpg); background-position: center;">
                 <h2 class="display-4" style="color: white;">Upptäck våra destinationer</h2>
-                <hr class="my-4" />
+                <br>
                 <h3 style="color: white; font-weight: 600;">Från soliga stränder till spännande äventyr - vi har något för hela familjen!</h3>
             </div>
         </header>
