--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                                 <a class="nav-link active" href="contact.html" aria-current="page"><u>Kontakt</u></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>  </a>
+                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>(1)</a>
                             </li>
                         </ul>
             
@@ -76,7 +76,7 @@
             <div class="jumbotron text-center my-5 p-5" style="background-image:linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0)), url(images/beach-background-third.jpg); background-position: center;">
                 <h2 class="display-4" style="color: white;">Kontakta oss</h2>
                 <h3 class="lead"style="color: white; font-weight: 600;" ></h3>
-                <hr class="my-4" />
+                <br>
             </div>
         </header>
         <main></main>
