--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <a class="nav-link" href="contact.html">Kontakt</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>  </a>
+                                <a class="nav-link" href="basket.html">Varukorg <i class='bx  bx-basket' style="position:relative; top: 3px;"></i>(1)</a>
                             </li>
                         </ul>
             
@@ -76,7 +76,7 @@
             <div class="jumbotron text-center my-5 p-5">
                 <h2 class="display-4" style="color: white;">Välkommen till Sol & Semester AB!</h2>
                 <h3 class="lead"style="color: white; font-weight: 600;" >Din drömsemester börjar här</h3>
-                <hr class="my-4" />
+                <br>
                 <h3 style="color: white; font-weight: 600;">Utforska våra fantastiska resor och erbjudanden</h3>
                 <a class="btn btn-lg bg-white m-3" href="productlist.html" role="button">Boka redan nu!</a>
             </div>
