--- a/basket.html
+++ b/basket.html
@@ -73,18 +73,24 @@
                     </div>
                 </div>
             </nav>
+            <div class="jumbotron text-center my-5 p-5" style="background-image:linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0)), url(images/basket-background.jpg); background-position: center;">
+                <h2 class="display-4" style="color: white;">Varukorg</h2>
+                <br>
+                <h3 class="lead"style="color: white; font-weight: 600;">Här kan du hantera alla dina bokningar</h3>
+                <br>
+            </div>
         </header>
 
         <main>
             <section>
                 <div class="container mt-5">
-                    <h2 class="text-center mb-4">Din Varukorg</h2>
-                    <p class="text-center">Här kan du se och hantera dina bokningar.</p>
+                    <h2 class="text-center mb-4" style="margin-top: 0 !important;">Din Resekorg</h2>
+                    <p class="text-center">Du är nästan klar! Här nedan ser du dina valda resor - du kan justera, ta bort eller fortsätta till betalning. Kontrollera att datum, flyg och hotell stämmer. När du är redo, klicka på knappen längst ner för att slutföra din bokning.</p>
 
                     <h3>Visar 1 av 1 resor:</h3>
                 <div class="card mb-4"> <!-- Card för att visa bokningsinformation -->
-                    <div class="card-header" style="background-color: #ffd966;">
-                      <h4>Din bokning</h4>
+                    <div class="card-header">
+                      <h4 style="color: white;">Din bokning</h4>
                     </div>
                     <div class="card-body">
                       <h4 class="card-title">Resa till Chania, Kreta</h4>
@@ -112,13 +118,15 @@
                       <br>
                   
                       <div class="d-flex justify-content-between">
-                        <a href="#" class="btn btn-outline-danger">Ta bort resa</a>
+                        <a href="#" class="btn btn-primary">Ta bort resa</a>
                         <a href="#" class="btn btn-primary">Fortsätt till betalning</a>
                       </div>
                     </div>
                   </div>
             </section>
         </main>
+
+        <div id="toppnav"><a href="#top" style="color: black;">&#8593;</a></div>
         
         <footer>
             <div class="footer-container">
