--- a/contact.html
+++ b/contact.html
@@ -75,11 +75,72 @@
             </nav>
             <div class="jumbotron text-center my-5 p-5" style="background-image:linear-gradient(rgba(4,9,30,0.3),rgba(4,9,30,0)), url(images/contact-background.jpg); background-position: center;">
                 <h2 class="display-4" style="color: white;">Kontakta oss</h2>
-                <h3 class="lead"style="color: white; font-weight: 600;" ></h3>
+                <br>
+                <h3 class="lead"style="color: white; font-weight: 600;" >Vi hjälper dig gärna!</h3>
                 <br>
             </div>
         </header>
-        <main></main>
+
+        <main>
+            <section>
+                <h2>Har du frågor eller behöver hjälp?</h2>
+                <p>Du kan kontakta oss med dina funderingar på flera sätt. Vår telefonsupport hjälper dig gärna med dina frågor, eller så kan du skicka ett meddelande via vårt kontaktformulär nedan. 
+                    Vi finns här för att hjälpa dig med allt från bokningar till allmänna frågor om våra resor.</p>
+                </p>
+            </section>
+
+            <section>
+                <h3>Kontakta vår kundtjänst via telefon</h3>
+                <p><b>Telefon:</b> 08-123 45 67</p>
+                <br>
+                <p>Mån-Fre: 08:00 - 18:00</p>
+                <p>Lördag: 10:00 - 14:00</p>
+                <p>Söndag: Stängt</p>
+            </section>
+            <section>
+                <h3>Kontakta vår kundtjänst här via mail</h3>
+                <p><b>Vår e-post:</b> info@solsemesterab.se</p>
+                <br>
+                <p>Fyll i formuläret nedan så återkommer vi till dig så snart som möjligt.</p>
+                <form style="margin-top: 40px;" action="feedbackpage.html" method="get">
+                    <div class="mb-3">
+                      <label for="name" class="form-label">Namn</label>
+                      <input type="text" class="form-control" id="name" placeholder="Ditt namn">
+                    </div>
+                    <div class="mb-3">
+                      <label for="email" class="form-label">E-post</label>
+                      <input type="email" class="form-control" id="email" placeholder="din@email.com">
+                    </div>
+                    <div class="mb-3">
+                      <label for="message" class="form-label">Meddelande</label>
+                      <textarea class="form-control" id="message" rows="4" placeholder="Vad vill du fråga om?"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Skicka</button>
+                  </form>
+            </section>
+            <section>
+                <div>
+                    <h3>Vi finns även på sociala medier</h3>
+                    <p>Följ gärna oss för att se <b>alla</b> nya erbjudanden!</p>
+                    <div class="social-icons-contact">
+                        <ul>
+                            <li><a href="https://www.facebook.com/">Facebook <i class='bx bxl-facebook'></i></a></li>
+                            <li><a href="https://www.instagram.com/">Instagram <i class='bx bxl-instagram'></i></a></li>
+                            <li><a href="https://x.com/?lang=en">Twitter <i class='bx bxl-twitter'></i></a></li>
+                            <li><a href="https://www.linkedin.com/feed/">LinkedIn <i class='bx bxl-linkedin'></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h3>Vår adress</h3>
+                <p>Du kan även besöka vår fysiska resebyrå Sol & Semester AB i Lindköping för att ställa dina frågor.</p>
+                <br>
+                <p><b>Adress:</b> Solsemestergatan 65, 511 99 Lindköping</p>
+        </main>
+
+        <div id="toppnav"><a href="#top" style="color: black;">&#8593;</a></div>
+
         <footer>
             <div class="footer-container">
               
