--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                     Vi finns här för att hjälpa dig med allt från bokningar till allmänna frågor om våra resor.</p>
                 </p>
             </section>
-
+            <hr>
             <section>
                 <h3>Kontakta vår kundtjänst via telefon</h3>
                 <p><b>Telefon:</b> 08-123 45 67</p>
@@ -97,7 +97,8 @@
                 <p>Lördag: 10:00 - 14:00</p>
                 <p>Söndag: Stängt</p>
             </section>
-            <section>
+            <hr>
+            <section class="contactform" id="contactform">
                 <h3>Kontakta vår kundtjänst här via mail</h3>
                 <p><b>Vår e-post:</b> info@solsemesterab.se</p>
                 <br>
@@ -118,6 +119,7 @@
                     <button type="submit" class="btn btn-primary">Skicka</button>
                   </form>
             </section>
+            <hr>
             <section>
                 <div>
                     <h3>Vi finns även på sociala medier</h3>
@@ -132,6 +134,7 @@
                     </div>
                 </div>
             </section>
+            <hr>
             <section>
                 <h3>Vår adress</h3>
                 <p>Du kan även besöka vår fysiska resebyrå Sol & Semester AB i Lindköping för att ställa dina frågor.</p>
