--- a/basket.html
+++ b/basket.html
@@ -119,7 +119,7 @@
                   
                       <div class="d-flex justify-content-between">
                         <a href="#" class="btn btn-primary">Ta bort resa</a>
-                        <a href="#" class="btn btn-primary">Fortsätt till betalning</a>
+                        <a href="paymentpage.html" class="btn btn-primary">Fortsätt till betalning</a>
                       </div>
                     </div>
                   </div>
