--- a/productlist.html
+++ b/productlist.html
@@ -82,8 +82,8 @@
         <main>
           <section>
             <div class="container">
-              <h1 class="text-center mb-4">Våra Resor</h1>
-              <p class="text-center mb-5">Här hittar du <b>alla</b> våra soliga resmål - från tropiska paradis till äventyrliga weekendstäder. Välj din favorit och börja planera drömsemestern!</p>
+              <h1 class="mb-4">Våra Resor</h1>
+              <p class="mb-5">Här hittar du <b>alla</b> våra soliga resmål - från tropiska paradis till äventyrliga weekendstäder. Välj din favorit och börja planera drömsemestern!</p>
           
               <div class="row">
           
