--- a/contact.html
+++ b/contact.html
@@ -16,23 +16,10 @@
   <body>
     <header class="p-2">
       <!-- Header med navigationsmeny och jumbotron, padding med Bootstrap. Denna är samma navbar för alla sidor på hemsidan-->
-      <nav class="navbar navbar-expand-md p-4 rounded">
-        <!-- Navigationsmeny med Bootstrap, mycket padding och rundade hörn -->
-        <div class="container">
-          <!-- Länk till startsidan med logotyp och företagsnamn -->
-          <a
-            class="navbar-brand d-flex align-items-center fs-1 fs-md-3 fs-lg-3"
-            href="index.html"
-            style="color: #155fa0; font-weight: 800"
-          >
-            <!-- titeln, är en flexbox, vertikalt centrerad och har varierbar storlek-->
-            <img
-              src="images/logo.png"
-              alt="Sol & Semester AB Logo, ett rött och vitt parasoll i sanden"
-              width="30"
-              height="30"
-              class="d-inline-block me-2"
-            >
+      <nav class="navbar navbar-expand-md p-4 rounded"><!-- Navigationsmeny med Bootstrap, mycket padding och rundade hörn -->
+        <div class="container"> <!-- Länk till startsidan med logotyp och företagsnamn -->
+          <a class="navbar-brand d-flex align-items-center fs-1 fs-md-3 fs-lg-3" href="index.html" style="color: #155fa0; font-weight: 800;"> <!-- titeln, är en flexbox, vertikalt centrerad och har varierbar storlek-->
+            <img src="images/logo.png" alt="Sol & Semester AB Logo, ett rött och vitt parasoll i sanden" class="d-inline-block me-4"> <!-- loggan är inline, med lite marginal till titlen -->
             <!-- loggan är inline, med alignad text -->
             Sol & Semester AB
           </a>
