--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
       <section>
         <h3>Vår adress</h3>
         <p>
-          Du kan även besöka vår fysiska resebyrå Sol & Semester AB i Lindköping
+          Du kan också besöka vår fysiska resebyrå Sol & Semester AB i Lindköping
           för att ställa dina frågor.
         </p>
         <br>
