--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container">
           <h2 class="mb-3">Har du frågor eller vill du komma i kontakt med oss?</h2>
           <p class="mb-4 fs-5">Fyll i vårt kontaktformulär så återkommer vi till dig så snart som möjligt!</p>
-          <a href="contact.html#contactform" class="btn btn-light btn-lg fw-bold">Kontakta oss</a> <!-- call to action knapp som leder till kontaktformuläret på kontaktsidan -->
+          <a href="contact.html#contactform" class="btn btn-lg">Kontakta oss</a> <!-- call to action knapp som leder till kontaktformuläret på kontaktsidan -->
         </div>
       </section>
     </main>
