--- a/product-crete.html
+++ b/product-crete.html
@@ -100,7 +100,7 @@
                 <div class="carousel-item" data-bs-interval="2000">
                   <img src="images/destinations/crete-beach.jpg" class="d-block w-100" alt="En solig strand med blått vatten med ett berg i bakgrunden vid havet">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>En av de många fantastiska ständerna</h5>
+                    <h5>Chania Beach</h5>
                   </div>
                 </div>
               </div>
