--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
                     <h4 class="card-title">Prag</h4>
                     <p class="card-text">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna</p>
+                    <br>
+                    <p><b>Nedsatt pris!</b> Från endast <u>5 500</u>:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
@@ -100,6 +102,8 @@
                   <div class="card-body d-flex flex-column"> <!-- d-flex och flex-column för att göra korten responsiva och centrerade -->
                     <h4 class="card-title">Kreta</h4>
                     <p class="card-text">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
+                    <br>
+                    <p><b>Nedsatt pris!</b> Från endast <u>10 500</u>:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
@@ -110,7 +114,9 @@
                   <img src="images/destinations/borabora.jpg" class="card-img-top" alt="En bro i trä leder ut till ett hus med vasstak ute i det tropiskt blå havet">
                   <div class="card-body d-flex flex-column">
                     <h4 class="card-title">Bora Bora</h4>
-                    <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en minnesvärd familjesemester</p>
+                    <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en härlig och minnesvärd familjesemester</p>
+                    <br>
+                    <p><b>Nedsatt pris!</b> Från endast <u>16 900:</u>:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
