--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h4 class="card-title">Prag</h4>
                     <p class="card-text">Prag bjuder på sagolik arkitektur, familjevänliga museer och båtturer på Moldau - en stad full av upplevelser för både barn och vuxna</p>
                     <br>
-                    <p><b>Nedsatt pris!</b> Från endast <u>5 500</u>:-</p>
+                    <p><b>Nedsatt pris!</b> Från endast 5 500:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
@@ -103,7 +103,7 @@
                     <h4 class="card-title">Kreta</h4>
                     <p class="card-text">Kreta är en perfekt blandning av sol, bad och grekisk charm. Här väntar barnvänliga stränder, mysiga byar och spännande utflyktsmål</p>
                     <br>
-                    <p><b>Nedsatt pris!</b> Från endast <u>10 500</u>:-</p>
+                    <p><b>Nedsatt pris!</b> Från endast 10 500:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
@@ -116,7 +116,7 @@
                     <h4 class="card-title">Bora Bora</h4>
                     <p class="card-text">Bora Bora är en tropisk idyll med kristallklart vatten, snorkling i världsklass och lugn miljö - perfekt för en härlig och minnesvärd familjesemester</p>
                     <br>
-                    <p><b>Nedsatt pris!</b> Från endast <u>16 900:</u>:-</p>
+                    <p><b>Nedsatt pris!</b> Från endast 16 900:-</p>
                     <a href="product-crete.html" class="btn btn-primary mt-auto">Läs mer</a> <!-- alla länkar till produkterna leder till produktsidan för kreta -->
                   </div>
                 </div>
