--- a/basket.html
+++ b/basket.html
@@ -61,7 +61,7 @@
         <div class="container text-center py-5">
           <h2 class="display-4 text-white">Din Varukorg</h2> <!-- rubriken för sidan, stor text -->
           <br>
-          <h3 class="lead text-white fw-semibold">Här kan du hantera alla dina bokningar</h3>
+          <h3 class="text-white fw-semibold">Här kan du hantera alla dina bokningar</h3>
         </div>
       </section>
       <section>
