--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
           <h2 class="display-4 text-white">Kontakta oss</h2>
           <!-- rubriken för sidan, stor text -->
           <br>
-          <h3 class="lead text-white fw-semibold">Vi hjälper dig gärna!</h3>
+          <h3 class="text-white fw-semibold">Vi hjälper dig gärna!</h3>
         </div>
       </section>
 
