--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
         </div>
 
         <!-- Sociala medier -->
-        <div class="footer-section">
+        <nav class="footer-section">
           <h3>Följ oss</h3>
           <div class="social-icons">
             <a href="https://www.facebook.com/"
@@ -224,7 +224,7 @@
               ><i class="bx bxl-linkedin"></i
             ></a>
           </div>
-        </div>
+        </nav>
 
         <!-- Supporttider -->
         <div class="footer-section">
