--- a/paymentpage.html
+++ b/paymentpage.html
@@ -93,7 +93,7 @@
           <p>E-post: info@solsemesterab.se</p>
         </div>
 
-        <div class="footer-section">  <!-- sociala medier -->
+        <nav class="footer-section">  <!-- sociala medier -->
           <h3>Följ oss</h3>
           <div class="social-icons">
             <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a> <!--boxicons för sociala medier, importare via länken i head-->
@@ -101,7 +101,7 @@
             <a href="https://x.com/?lang=en"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.linkedin.com/feed/"><i class='bx bxl-linkedin'></i></a>
           </div>
-        </div>
+        </nav>
 
         <div class="footer-section"> <!-- kundtjänst öppetider -->
           <h3>Supporttider</h3>
@@ -118,7 +118,7 @@
         </p>
       </div>
     </footer>
-    
+
     <!-- Importerad bootstrap javascript som läggs i script -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
