--- a/product-crete.html
+++ b/product-crete.html
@@ -244,7 +244,7 @@
           <p>E-post: info@solsemesterab.se</p>
         </div>
 
-        <div class="footer-section">  <!-- sociala medier -->
+        <nav class="footer-section">  <!-- sociala medier -->
           <h3>Följ oss</h3>
           <div class="social-icons">
             <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a> <!--boxicons för sociala medier, importare via länken i head-->
@@ -252,7 +252,7 @@
             <a href="https://x.com/?lang=en"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.linkedin.com/feed/"><i class='bx bxl-linkedin'></i></a>
           </div>
-        </div>
+        </nav>
 
         <div class="footer-section"> <!-- kundtjänst öppetider -->
           <h3>Supporttider</h3>
