--- a/productlist.html
+++ b/productlist.html
@@ -211,15 +211,15 @@
           <p>E-post: info@solsemesterab.se</p>
         </div>
 
-        <div class="footer-section">  <!-- sociala medier -->
+        <nav class="footer-section">  <!-- sociala medier -->
           <h3>Följ oss</h3>
-          <div class="social-icons">
+          <nav class="social-icons">
             <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a> <!--boxicons för sociala medier, importare via länken i head-->
             <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
             <a href="https://x.com/?lang=en"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.linkedin.com/feed/"><i class='bx bxl-linkedin'></i></a>
-          </div>
-        </div>
+          </nav>
+        </nav>
 
         <div class="footer-section"> <!-- kundtjänst öppetider -->
           <h3>Supporttider</h3>
